manifest/openvidu/loopback-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loopback
  io.openvidu.service: loopback
spec:
  replicas: 1
  selector:
    matchLabels:
      io.openvidu.service: loopback
  template:
    metadata:
      labels:
        io.openvidu.service: loopback
    spec:
      containers:
      - name: loopback
        image: nmatsui/kurento-robot-camera-loopback:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: loopback
---
apiVersion: v1
kind: Service
metadata:
  name: loopback
  labels:
    app: loopback
spec:
  type: ClusterIP
  selector:
    io.openvidu.service: loopback
  ports:
  - port: 3000
    targetPort: loopback
    name: loopback
