manifest/openvidu/openvidu-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app: openvidu-server
  labels:
    io.openvidu.service: openvidu-server
  name: openvidu-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.openvidu.service: openvidu-server
  strategy: {}
  template:
    metadata:
      annotations:
        app: openvidu-server
      labels:
        io.openvidu.service: openvidu-server
    spec:
      serviceAccount: openvidu 
      serviceAccountName: openvidu
      containers:
        - command:
            - /usr/local/bin/entrypoint.sh
          image: openvidu/openvidu-server:2.21.0
          name: openvidu-server
          ports:
            - containerPort: 5443
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app: openvidu-server
  labels:
    io.openvidu.service: openvidu-server
  name: openvidu-server
spec:
  ports:
    - name: "5443"
      port: 5443
      targetPort: 5443
  selector:
    io.openvidu.service: openvidu-server
