manifest/openvidu/openvidu-server-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    io.openvidu.service: openvidu-server
  name: openvidu-server
  namespace: openvidu
spec:
  host: video.${BASE_DOMAIN}
  port:
    targetPort: "5443"
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: openvidu-server
    weight: 100
  wildcardPolicy: None
